Set new initial song, fix weird gap

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -194,7 +194,7 @@ canvas {
 }
 
 .dashboard:after {
-    left: 100%;
+    left: 99.9999%;
     right: 0;
     transform: scaleX(-1);
     width: 100%;
